--- a/web/sites/default/config/views.view.group_advisory_groups.yml
+++ b/web/sites/default/config/views.view.group_advisory_groups.yml
@@ -1,23 +1,19 @@
-uuid: d933d21b-7fe6-4170-89bc-0e0b9c7983cc
+uuid: 23b2bae0-7652-4daa-a883-e5f3e4cf7303
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.group.field_summary
-    - group.type.bureau_office
-    - group.type.program
     - taxonomy.vocabulary.group_type
   content:
-    - 'taxonomy_term:group_type:c7237379-70a2-44a9-9500-d669b373b39b'
-    - 'taxonomy_term:group_type:cf3f697a-663a-40c2-b380-326c8621e8c8'
+    - 'taxonomy_term:group_type:c406ffd3-818f-4cbd-b857-fea3b906a675'
   module:
     - group
     - taxonomy
-    - user
-id: group_offices
-label: 'Group: Offices'
+id: group_advisory_groups
+label: 'Group: Advisory groups'
 module: views
-description: 'A list of all the offices and programs that are a child to another group'
+description: 'A list of all the programs that are a child to another group'
 tag: Group
 base_table: groups_field_data
 base_field: id
@@ -30,9 +26,8 @@ display:
     position: 0
     display_options:
       access:
-        type: perm
-        options:
-          perm: 'access content'
+        type: none
+        options: {  }
       cache:
         type: tag
         options: {  }
@@ -204,48 +199,6 @@ display:
           field_api_classes: false
           plugin_id: field
       filters:
-        type:
-          id: type
-          table: groups_field_data
-          field: type
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            bureau_office: bureau_office
-            program: program
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-            argument: null
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: group
-          entity_field: type
-          plugin_id: bundle
         field_group_type_target_id:
           id: field_group_type_target_id
           table: group__field_group_type
@@ -255,9 +208,8 @@ display:
           admin_label: ''
           operator: or
           value:
-            58: 58
-            59: 59
-          group: 1
+            60: 60
+          group: 2
           exposed: false
           expose:
             operator_id: ''
@@ -306,7 +258,7 @@ display:
           entity_type: group
           entity_field: label
           plugin_id: standard
-      title: 'Offices and programs'
+      title: 'Advisory groups'
       header: {  }
       footer: {  }
       empty: {  }
@@ -364,9 +316,10 @@ display:
       link_url: ''
       link_display: page_1
       filter_groups:
-        operator: AND
+        operator: OR
         groups:
-          1: OR
+          1: AND
+          2: AND
     cache_metadata:
       max-age: -1
       contexts:
@@ -375,10 +328,96 @@ display:
         - route
         - url
         - user
-        - user.permissions
       tags:
         - 'config:field.storage.group.field_summary'
         - extensions
+  block_1:
+    display_plugin: block
+    id: block_1
+    display_title: Block
+    position: 2
+    display_options:
+      display_extenders: {  }
+      fields:
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: null
+          entity_field: label
+          plugin_id: field
+      defaults:
+        fields: false
+        empty: false
+      block_hide_empty: true
+      empty: {  }
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - url
+        - user
+      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
@@ -386,7 +425,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: group/%group/offices
+      path: group/%group/advisory-groups
       defaults:
         pager: true
         style: false
@@ -412,7 +451,6 @@ display:
         - route
         - url
         - user
-        - user.permissions
       tags:
         - 'config:field.storage.group.field_summary'
         - extensions
