POWR-1166 first pass at group type and displays

--- a/web/sites/default/config/field.field.group.advisory_group.field_featured_groups.yml
+++ b/web/sites/default/config/field.field.group.advisory_group.field_featured_groups.yml
@@ -1,4 +1,4 @@
-uuid: 9bd6f531-0189-4d3e-8ea0-099f9afeafb2
+uuid: 38b44980-d9ee-418e-ad67-a1bf21a56323
 langcode: en
 status: true
 dependencies:
@@ -15,14 +15,14 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: group.bureau_office.field_featured_groups
+id: group.advisory_group.field_featured_groups
 field_name: field_featured_groups
 entity_type: group
-bundle: bureau_office
+bundle: advisory_group
 label: 'Featured groups'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -38,5 +38,5 @@ settings:
       field: label
       direction: ASC
     auto_create: false
-    auto_create_bundle: bureau_office
+    auto_create_bundle: advisory_group
 field_type: entity_reference
