--- a/web/sites/default/config/field.field.group.advisory_group.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.advisory_group.field_parent_group.yml
@@ -1,39 +1,36 @@
-uuid: 9bd6f531-0189-4d3e-8ea0-099f9afeafb2
+uuid: 85b5aa3e-d5dd-43da-b3a4-7c395e684120
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.group.field_featured_groups
+    - field.storage.group.field_parent_group
     - group.type.advisory_group
     - group.type.bureau_office
     - group.type.elected_official
     - group.type.program
-    - group.type.project
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
-    custom_add_another: ''
-    custom_remove: ''
-id: group.bureau_office.field_featured_groups
-field_name: field_featured_groups
+    custom_add_another: 'Add another'
+    custom_remove: Remove
+id: group.advisory_group.field_parent_group
+field_name: field_parent_group
 entity_type: group
-bundle: bureau_office
-label: 'Featured groups'
+bundle: advisory_group
+label: 'Parent bureau, office, or program'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:group'
   handler_settings:
     target_bundles:
-      advisory_group: advisory_group
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
-      project: project
     sort:
       field: label
       direction: ASC
