--- a/web/sites/default/config/core.entity_form_display.group.advisory_group.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.advisory_group.default.yml
@@ -23,6 +23,7 @@ dependencies:
   module:
     - entity_browser
     - field_group
+    - maxlength
     - menu_link
 third_party_settings:
   field_group:
@@ -158,10 +159,15 @@ content:
   field_summary:
     weight: 6
     settings:
-      size: 60
+      rows: 3
       placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
+    type: string_textarea
     region: content
   field_topics:
     weight: 5
