--- a/web/sites/default/config/views.view.sitewide_advisory_groups_index.yml
+++ b/web/sites/default/config/views.view.sitewide_advisory_groups_index.yml
@@ -75,7 +75,7 @@ display:
         options:
           view_modes:
             'entity:group':
-              advisory_group: teaser
+              advisory_group: search_result
               bureau_office: teaser
               elected_official: teaser
               program: teaser
@@ -211,7 +211,7 @@ display:
           exposed: true
           expose:
             operator_id: search_api_fulltext_op
-            label: 'Search projects'
+            label: 'Search advisory groups'
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
@@ -224,6 +224,8 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -241,7 +243,6 @@ display:
           min_length: null
           fields:
             - rendered_item
-            - title
           plugin_id: search_api_fulltext
       sorts:
         group_title:
