--- a/web/sites/default/config/core.entity_view_display.group.advisory_group.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.advisory_group.teaser.yml
@@ -22,9 +22,6 @@ dependencies:
     - group.type.advisory_group
   module:
     - ds
-    - menu_link
-    - taxonomy
-    - user
 third_party_settings:
   ds:
     layout:
@@ -36,193 +33,34 @@ third_party_settings:
     regions:
       content:
         - label
-        - field_featured_media
-        - created
-        - changed
-        - field_enable_documents_menu_item
-        - field_enable_events_menu_item
-        - field_enable_guides_and_informat
-        - uid
-        - field_enable_news_and_notices_me
-        - field_legacy_path
-        - field_menu_link
-        - field_official_organization_name
-        - field_parent_group
-        - field_search_keywords
-        - field_shortname_or_acronym
-        - field_topics
         - field_summary
-        - group_site_menu_entity_view_1
-        - field_featured_content
-        - field_featured_groups
 id: group.advisory_group.teaser
 targetEntityType: group
 bundle: advisory_group
 mode: teaser
 content:
-  changed:
-    type: timestamp_ago
-    weight: 0
-    region: content
-    label: above
-    settings:
-      future_format: '@interval hence'
-      past_format: '@interval ago'
-      granularity: 2
-    third_party_settings: {  }
-  created:
-    type: timestamp_ago
-    weight: 0
-    region: content
-    label: above
-    settings:
-      future_format: '@interval hence'
-      past_format: '@interval ago'
-      granularity: 2
-    third_party_settings: {  }
-  field_enable_documents_menu_item:
-    type: boolean
-    weight: 0
-    region: content
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-  field_enable_events_menu_item:
-    type: boolean
-    weight: 0
-    region: content
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-  field_enable_guides_and_informat:
-    type: boolean
-    weight: 0
-    region: content
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-  field_enable_news_and_notices_me:
-    type: boolean
-    weight: 0
-    region: content
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-  field_featured_content:
-    weight: 3
-    label: above
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: Featured
-            lb-col: false
-            classes: {  }
-    type: entity_reference_entity_view
-    region: content
-  field_featured_groups:
-    weight: 4
-    label: above
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    type: entity_reference_entity_view
-    region: content
-  field_featured_media:
-    weight: 0
-    label: hidden
-    settings:
-      view_mode: banner
-      link: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    type: entity_reference_entity_view
-    region: content
-  field_legacy_path:
-    type: string
-    weight: 0
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_menu_link:
-    type: menu_link
-    weight: 0
-    region: content
-    label: above
-    settings:
-      link_to_target: true
-    third_party_settings: {  }
-  field_official_organization_name:
-    type: string
-    weight: 0
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_parent_group:
-    type: entity_reference_label
-    weight: 0
-    region: content
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-  field_search_keywords:
-    type: string
-    weight: 0
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_shortname_or_acronym:
-    type: string
-    weight: 0
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   field_summary:
     weight: 1
     label: hidden
     settings:
       link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: string
+    region: content
+  label:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: true
     third_party_settings:
       ds:
         ft:
@@ -240,8 +78,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: h2
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -252,33 +90,22 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-    type: string
-    region: content
-  field_topics:
-    type: entity_reference_rss_category
-    weight: 0
-    region: content
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-  group_site_menu_entity_view_1:
-    weight: 2
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  label:
-    type: string
-    weight: 0
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  uid:
-    type: author
-    weight: 0
-    region: content
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  changed: true
+  created: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_featured_content: true
+  field_featured_groups: true
+  field_featured_media: true
+  field_legacy_path: true
+  field_menu_link: true
+  field_official_organization_name: true
+  field_parent_group: true
+  field_search_keywords: true
+  field_shortname_or_acronym: true
+  field_topics: true
+  group_site_menu_entity_view_1: true
+  uid: true
