POWR-1166 fixed some issues with the media browser settings

--- a/web/sites/default/config/core.entity_form_display.group.advisory_group.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.advisory_group.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_browser
+    - entity_browser.browser.featured_image
     - field.field.group.advisory_group.field_enable_documents_menu_item
     - field.field.group.advisory_group.field_enable_events_menu_item
     - field.field.group.advisory_group.field_enable_guides_and_informat
@@ -21,6 +21,7 @@ dependencies:
     - field.field.group.advisory_group.field_topics
     - group.type.advisory_group
   module:
+    - chosen_field
     - entity_browser
     - field_group
     - maxlength
@@ -96,21 +97,21 @@ content:
     region: content
   field_featured_media:
     type: entity_browser_entity_reference
-    weight: 3
+    weight: 1
     settings:
-      entity_browser: media_browser
+      entity_browser: featured_image
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
+      field_widget_replace: true
       selection_mode: selection_append
       field_widget_display_settings:
-        view_mode: thumbnail
-      open: true
-      field_widget_replace: false
+        view_mode: banner
+      open: false
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 12
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -118,13 +119,13 @@ content:
     type: string_textfield
     region: content
   field_menu_link:
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
     region: content
   field_official_organization_name:
-    weight: 1
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -132,7 +133,7 @@ content:
     type: string_textfield
     region: content
   field_parent_group:
-    weight: 4
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -141,7 +142,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 10
+    weight: 6
     settings:
       size: 60
       placeholder: ''
@@ -157,7 +158,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 6
+    weight: 3
     settings:
       rows: 3
       placeholder: ''
@@ -171,12 +172,9 @@ content:
     region: content
   field_topics:
     weight: 5
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   label:
     type: string_textfield
