POWR-1166 fix the group advisory groups view

--- a/web/sites/default/config/views.view.group_advisory_groups.yml
+++ b/web/sites/default/config/views.view.group_advisory_groups.yml
@@ -262,7 +262,7 @@ display:
           entity_type: group
           entity_field: label
           plugin_id: standard
-      title: Projects
+      title: 'Advisory groups'
       header: {  }
       footer: {  }
       empty: {  }
@@ -428,7 +428,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: group/%group/projects
+      path: group/%group/advisory-groups
       pager:
         type: none
         options:
