--- a/web/sites/default/config/group.role.advisory_group-editor.yml
+++ b/web/sites/default/config/group.role.advisory_group-editor.yml
@@ -12,53 +12,53 @@ audience: member
 group_type: advisory_group
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'leave group'
-  2: 'access group_media overview'
-  3: 'access group_node overview'
-  7: 'create group_media:audio entity'
-  8: 'delete own group_media:audio entity'
-  9: 'update any group_media:audio entity'
-  10: 'update own group_media:audio entity'
-  11: 'view group_media:audio entity'
-  12: 'view unpublished group_media:audio entity'
-  13: 'create group_media:document entity'
-  14: 'delete own group_media:document entity'
-  15: 'update any group_media:document entity'
-  16: 'update own group_media:document entity'
-  17: 'view group_media:document entity'
-  18: 'view unpublished group_media:document entity'
-  19: 'create group_media:image entity'
-  20: 'delete own group_media:image entity'
-  21: 'update any group_media:image entity'
-  22: 'update own group_media:image entity'
-  23: 'view group_media:image entity'
-  24: 'view unpublished group_media:image entity'
-  25: 'create group_media:video entity'
-  26: 'delete own group_media:video entity'
-  27: 'update any group_media:video entity'
-  28: 'update own group_media:video entity'
-  29: 'view group_media:video entity'
-  30: 'view unpublished group_media:video entity'
-  32: 'create group_node:event entity'
-  33: 'delete own group_node:event entity'
-  34: 'update any group_node:event entity'
-  35: 'update own group_node:event entity'
-  36: 'view group_node:event entity'
-  37: 'view unpublished group_node:event entity'
-  38: 'create group_node:news entity'
-  39: 'delete own group_node:news entity'
-  40: 'update any group_node:news entity'
-  41: 'update own group_node:news entity'
-  42: 'view group_node:news entity'
-  43: 'view unpublished group_node:news entity'
-  44: 'delete own group_node:notification entity'
-  45: 'update own group_node:notification entity'
-  46: 'view group_node:notification entity'
-  47: 'view unpublished group_node:notification entity'
-  48: 'create group_node:page entity'
-  49: 'delete own group_node:page entity'
-  50: 'update any group_node:page entity'
-  51: 'update own group_node:page entity'
-  52: 'view group_node:page entity'
-  53: 'view unpublished group_node:page entity'
+  - 'access group_media overview'
+  - 'access group_node overview'
+  - 'create group_media:audio entity'
+  - 'create group_media:document entity'
+  - 'create group_media:image entity'
+  - 'create group_media:video entity'
+  - 'create group_node:event entity'
+  - 'create group_node:news entity'
+  - 'create group_node:page entity'
+  - 'delete own group_media:audio entity'
+  - 'delete own group_media:document entity'
+  - 'delete own group_media:image entity'
+  - 'delete own group_media:video entity'
+  - 'delete own group_node:event entity'
+  - 'delete own group_node:news entity'
+  - 'delete own group_node:notification entity'
+  - 'delete own group_node:page entity'
+  - 'leave group'
+  - 'update any group_media:audio entity'
+  - 'update any group_media:document entity'
+  - 'update any group_media:image entity'
+  - 'update any group_media:video entity'
+  - 'update any group_node:event entity'
+  - 'update any group_node:news entity'
+  - 'update any group_node:page entity'
+  - 'update own group_media:audio entity'
+  - 'update own group_media:document entity'
+  - 'update own group_media:image entity'
+  - 'update own group_media:video entity'
+  - 'update own group_node:event entity'
+  - 'update own group_node:news entity'
+  - 'update own group_node:notification entity'
+  - 'update own group_node:page entity'
+  - 'view group'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
+  - 'view group_node:event entity'
+  - 'view group_node:news entity'
+  - 'view group_node:notification entity'
+  - 'view group_node:page entity'
+  - 'view unpublished group_media:audio entity'
+  - 'view unpublished group_media:document entity'
+  - 'view unpublished group_media:image entity'
+  - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:event entity'
+  - 'view unpublished group_node:news entity'
+  - 'view unpublished group_node:notification entity'
+  - 'view unpublished group_node:page entity'
