--- a/web/sites/default/config/group.role.advisory_group-anonymous.yml
+++ b/web/sites/default/config/group.role.advisory_group-anonymous.yml
@@ -12,12 +12,12 @@ audience: anonymous
 group_type: advisory_group
 permissions_ui: true
 permissions:
-  0: 'view group'
-  2: 'view group_media:audio entity'
-  3: 'view group_media:document entity'
-  4: 'view group_media:image entity'
-  5: 'view group_media:video entity'
-  6: 'view group_node:event entity'
-  7: 'view group_node:news entity'
-  8: 'view group_node:notification entity'
-  9: 'view group_node:page entity'
+  - 'view group'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
+  - 'view group_node:event entity'
+  - 'view group_node:news entity'
+  - 'view group_node:notification entity'
+  - 'view group_node:page entity'
