--- a/web/sites/default/config/group.role.advisory_group-member.yml
+++ b/web/sites/default/config/group.role.advisory_group-member.yml
@@ -12,22 +12,23 @@ audience: member
 group_type: advisory_group
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'leave group'
-  2: 'access group_media overview'
-  3: 'access group_node overview'
-  7: 'view group_media:audio entity'
-  8: 'view unpublished group_media:audio entity'
-  9: 'view group_media:document entity'
-  10: 'view group_media:image entity'
-  11: 'view unpublished group_media:image entity'
-  12: 'view group_media:video entity'
-  13: 'view unpublished group_media:video entity'
-  15: 'view group_node:event entity'
-  16: 'view unpublished group_node:event entity'
-  17: 'view group_node:news entity'
-  18: 'view unpublished group_node:news entity'
-  19: 'view group_node:notification entity'
-  20: 'view unpublished group_node:notification entity'
-  21: 'view group_node:page entity'
-  22: 'view unpublished group_node:page entity'
+  - 'access group_media overview'
+  - 'access group_node overview'
+  - 'leave group'
+  - 'view group'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
+  - 'view group_node:event entity'
+  - 'view group_node:news entity'
+  - 'view group_node:notification entity'
+  - 'view group_node:page entity'
+  - 'view unpublished group_media:audio entity'
+  - 'view unpublished group_media:document entity'
+  - 'view unpublished group_media:image entity'
+  - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:event entity'
+  - 'view unpublished group_node:news entity'
+  - 'view unpublished group_node:notification entity'
+  - 'view unpublished group_node:page entity'
