--- a/web/sites/default/config/group.role.advisory_group-editor.yml
+++ b/web/sites/default/config/group.role.advisory_group-editor.yml
@@ -36,6 +36,7 @@ permissions:
   - 'update any group_media:video entity'
   - 'update any group_node:event entity'
   - 'update any group_node:news entity'
+  - 'update any group_node:notification entity'
   - 'update any group_node:page entity'
   - 'update own group_media:audio entity'
   - 'update own group_media:document entity'
