--- a/web/sites/default/config/group.role.advisory_group-member.yml
+++ b/web/sites/default/config/group.role.advisory_group-member.yml
@@ -25,6 +25,7 @@ permissions:
   - 'view group_node:notification entity'
   - 'view group_node:page entity'
   - 'view unpublished group_media:audio entity'
+  - 'view unpublished group_media:document entity'
   - 'view unpublished group_media:image entity'
   - 'view unpublished group_media:video entity'
   - 'view unpublished group_node:event entity'
