--- a/web/sites/default/config/group.role.advisory_group-editor.yml
+++ b/web/sites/default/config/group.role.advisory_group-editor.yml
@@ -51,6 +51,7 @@ permissions:
   - 'view group_media:document entity'
   - 'view group_media:image entity'
   - 'view group_media:video entity'
+  - 'view group_membership content'
   - 'view group_node:event entity'
   - 'view group_node:news entity'
   - 'view group_node:notification entity'
