--- a/web/sites/default/config/group.role.advisory_group-member.yml
+++ b/web/sites/default/config/group.role.advisory_group-member.yml
@@ -12,6 +12,7 @@ audience: member
 group_type: advisory_group
 permissions_ui: true
 permissions:
+  - 'access group_media overview'
   - 'access group_node overview'
   - 'leave group'
   - 'view group'
@@ -19,6 +20,7 @@ permissions:
   - 'view group_media:document entity'
   - 'view group_media:image entity'
   - 'view group_media:video entity'
+  - 'view group_membership content'
   - 'view group_node:event entity'
   - 'view group_node:news entity'
   - 'view group_node:notification entity'
