--- a/web/sites/default/config/core.entity_view_display.group_content.advisory_group-group_node-event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group_content.advisory_group-group_node-event.default.yml
@@ -1,4 +1,4 @@
-uuid: 7ad0b1a6-92c3-46fe-b16f-97cc3a3c6497
+uuid: 27b31699-5110-48a1-8f36-eeb8f36fc3c1
 langcode: en
 status: true
 dependencies:
@@ -13,28 +13,25 @@ targetEntityType: group_content
 bundle: advisory_group-group_node-event
 mode: default
 content:
-  entity_id:
-    type: entity_reference_autocomplete
-    weight: 0
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    region: content
-    third_party_settings: {  }
   field_feature_this_content:
-    weight: 1
+    weight: -3
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_feature_until:
-    weight: 2
-    settings: {  }
+    weight: -4
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
     region: content
 hidden:
-  path: true
+  entity_id: true
   uid: true
