--- a/web/sites/default/config/field.field.group.advisory_group.field_address.yml
+++ b/web/sites/default/config/field.field.group.advisory_group.field_address.yml
@@ -24,21 +24,43 @@ default_value:
   -
     langcode: ''
     country_code: US
-    administrative_area: null
-    locality: null
+    administrative_area: ''
+    locality: ''
     dependent_locality: null
-    postal_code: null
+    postal_code: ''
     sorting_code: null
-    address_line1: null
-    address_line2: null
-    organization: null
-    given_name: null
+    address_line1: ''
+    address_line2: ''
+    organization: ''
+    given_name: ''
     additional_name: null
-    family_name: null
+    family_name: ''
 default_value_callback: ''
 settings:
   available_countries: {  }
   langcode_override: ''
-  field_overrides: {  }
+  field_overrides:
+    givenName:
+      override: hidden
+    additionalName:
+      override: hidden
+    familyName:
+      override: hidden
+    organization:
+      override: optional
+    addressLine1:
+      override: optional
+    addressLine2:
+      override: optional
+    postalCode:
+      override: optional
+    sortingCode:
+      override: hidden
+    dependentLocality:
+      override: hidden
+    locality:
+      override: optional
+    administrativeArea:
+      override: optional
   fields: {  }
 field_type: address
