--- a/web/sites/default/config/field.field.group.advisory_group.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.advisory_group.field_parent_group.yml
@@ -5,9 +5,6 @@ dependencies:
   config:
     - field.storage.group.field_parent_group
     - group.type.advisory_group
-    - group.type.bureau_office
-    - group.type.elected_official
-    - group.type.program
   module:
     - custom_add_another
 third_party_settings:
@@ -25,15 +22,10 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:group'
+  handler: views
   handler_settings:
-    target_bundles:
-      bureau_office: bureau_office
-      elected_official: elected_official
-      program: program
-    sort:
-      field: label
-      direction: ASC
-    auto_create: false
-    auto_create_bundle: bureau_office
+    view:
+      view_name: entity_reference_parent_group
+      display_name: entity_reference_1
+      arguments: {  }
 field_type: entity_reference
