POWR-1316 Update advisory group form Change to chosen widget to be same as project

--- a/web/sites/default/config/core.entity_form_display.group.advisory_group.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.advisory_group.default.yml
@@ -134,12 +134,9 @@ content:
     region: content
   field_parent_group:
     weight: 10
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   field_search_keywords:
     weight: 6
