--- a/web/sites/default/config/core.entity_view_display.group.advisory_group.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.advisory_group.featured.yml
@@ -30,11 +30,13 @@ third_party_settings:
       disable_css: false
       entity_classes: all_classes
       settings:
-        wrappers: null
-        outer_wrapper: null
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
         attributes: ''
-        link_attribute: null
-        link_custom: null
+        link_attribute: ''
+        link_custom: ''
         classes:
           layout_class: {  }
     regions:
