POWR-1474 fix config conflict

--- a/web/sites/default/config/core.entity_view_display.group.advisory_group.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.advisory_group.featured.yml
@@ -104,6 +104,8 @@ content:
 hidden:
   changed: true
   created: true
+  field_address: true
+  field_email: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
@@ -114,6 +116,7 @@ hidden:
   field_menu_link: true
   field_official_organization_name: true
   field_parent_group: true
+  field_phone: true
   field_search_keywords: true
   field_shortname_or_acronym: true
   field_summary: true
