--- a/web/sites/default/config/field.field.group.advisory_group.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.advisory_group.field_parent_group.yml
@@ -8,6 +8,7 @@ dependencies:
     - group.type.bureau_office
     - group.type.elected_official
     - group.type.program
+    - group.type.project
   module:
     - custom_add_another
 third_party_settings:
@@ -18,7 +19,7 @@ id: group.advisory_group.field_parent_group
 field_name: field_parent_group
 entity_type: group
 bundle: advisory_group
-label: 'Parent bureau, office, or program'
+label: 'Parent bureau, office, program, or project'
 description: ''
 required: false
 translatable: true
@@ -31,6 +32,7 @@ settings:
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
+      project: project
     sort:
       field: label
       direction: ASC
