--- a/web/sites/default/config/core.entity_view_display.group.advisory_group.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.advisory_group.featured.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.group.featured
+    - field.field.group.advisory_group.field_address
+    - field.field.group.advisory_group.field_email
     - field.field.group.advisory_group.field_enable_documents_menu_item
     - field.field.group.advisory_group.field_enable_events_menu_item
     - field.field.group.advisory_group.field_enable_guides_and_informat
@@ -15,6 +17,7 @@ dependencies:
     - field.field.group.advisory_group.field_menu_link
     - field.field.group.advisory_group.field_official_organization_name
     - field.field.group.advisory_group.field_parent_group
+    - field.field.group.advisory_group.field_phone
     - field.field.group.advisory_group.field_search_keywords
     - field.field.group.advisory_group.field_shortname_or_acronym
     - field.field.group.advisory_group.field_summary
@@ -34,16 +37,26 @@ third_party_settings:
           first: div
           second: div
         outer_wrapper: div
-        attributes: ''
+        attributes: role|button
         link_attribute: ''
         link_custom: ''
         classes:
-          layout_class: {  }
+          layout_class:
+            card--featured--group: card--featured--group
+          first: {  }
+          second: {  }
     regions:
       first:
         - field_featured_media
       second:
+        - 'bundle_field:group'
         - label
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 1
+        label: hidden
+        formatter: default
 id: group.advisory_group.featured
 targetEntityType: group
 bundle: advisory_group
@@ -67,7 +80,7 @@ content:
     region: first
   label:
     type: string
-    weight: 1
+    weight: 2
     region: second
     label: hidden
     settings:
