--- a/web/sites/default/config/core.entity_form_display.group.advisory_group.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.advisory_group.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.featured_image
+    - entity_browser.browser.locations_browser
     - field.field.group.advisory_group.field_address
     - field.field.group.advisory_group.field_email
     - field.field.group.advisory_group.field_enable_documents_menu_item
@@ -14,6 +14,7 @@ dependencies:
     - field.field.group.advisory_group.field_featured_groups
     - field.field.group.advisory_group.field_featured_media
     - field.field.group.advisory_group.field_legacy_path
+    - field.field.group.advisory_group.field_location
     - field.field.group.advisory_group.field_menu_link
     - field.field.group.advisory_group.field_official_organization_name
     - field.field.group.advisory_group.field_parent_group
@@ -40,7 +41,7 @@ third_party_settings:
         - field_enable_events_menu_item
         - field_enable_documents_menu_item
       parent_name: ''
-      weight: 10
+      weight: 11
       format_type: fieldset
       format_settings:
         id: ''
@@ -61,7 +62,7 @@ content:
     type: address_default
     region: content
   field_email:
-    weight: 6
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -97,7 +98,7 @@ content:
     type: boolean_checkbox
     region: content
   field_featured_content:
-    weight: 11
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
@@ -106,7 +107,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 12
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -130,15 +131,30 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 14
+    weight: 15
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_location:
+    weight: 6
+    settings:
+      entity_browser: locations_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: teaser
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
   field_menu_link:
-    weight: 15
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -152,23 +168,20 @@ content:
     type: string_textfield
     region: content
   field_parent_group:
-    weight: 13
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 14
+    settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_phone:
-    weight: 7
+    weight: 8
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
     region: content
   field_search_keywords:
-    weight: 9
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -197,7 +210,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
