--- a/web/sites/default/config/core.entity_view_display.group.advisory_group.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.advisory_group.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.group.advisory_group.field_featured_groups
     - field.field.group.advisory_group.field_featured_media
     - field.field.group.advisory_group.field_legacy_path
+    - field.field.group.advisory_group.field_location
     - field.field.group.advisory_group.field_menu_link
     - field.field.group.advisory_group.field_official_organization_name
     - field.field.group.advisory_group.field_parent_group
@@ -93,6 +94,14 @@ content:
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
+    region: content
+  field_location:
+    weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     weight: 1
