--- a/web/sites/default/config/core.entity_view_display.group.advisory_group.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.advisory_group.default.yml
@@ -37,6 +37,7 @@ third_party_settings:
       content:
         - field_featured_media
         - field_summary
+        - field_location
         - group_site_menu_entity_view_1
         - field_featured_content
         - field_featured_groups
@@ -46,7 +47,7 @@ bundle: advisory_group
 mode: default
 content:
   field_featured_content:
-    weight: 3
+    weight: 4
     label: above
     settings:
       view_mode: featured
@@ -63,7 +64,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_featured_groups:
-    weight: 4
+    weight: 5
     label: above
     settings:
       view_mode: featured
@@ -96,12 +97,21 @@ content:
     type: entity_reference_entity_view
     region: content
   field_location:
-    weight: 5
+    weight: 2
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_summary:
     weight: 1
@@ -140,7 +150,7 @@ content:
     type: string
     region: content
   group_site_menu_entity_view_1:
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
